--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   name             : "Yihui Ma"
   pronouns         : # example: "she/her"  
   bio              : "Game Developer & Computer Graphics"
-  location         : "Shanghai, China"
-  employer         : "Tencent"
+  location         : "Shanghai / Jedda"
+  employer         : "Tencent (Leave)"
   uri              : # URL
   email            : "yihuimacn@gmail.com" 
 
