--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Yihui Ma / Tencent"
+title                    : "Yihui Ma / KAUST"
 title_separator          : "-"
 name                     : &name "Yihui Ma"
 description              : &description "Game Developer & Computer Graphics"
